syntax = "proto3";

option csharp_namespace = "RPCServer";

package clock;

// The greeting service definition.
service Clock {
  // Sends a greeting
  rpc GetTime (TimeRequest) returns (TimeReply);
}

// The request message containing the user's name.
message TimeRequest {
  string timezone = 1;
}

// The response message containing the greetings.
message TimeReply {
	int64 message = 1;
}
